# git-info

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  git-info.pc.in  package.json
doc/: README.md
src/: generate-git-info
test/: test.c
