#
# git-info
#
# Copyright (c) 2018 Guillermo Calvo
# Licensed under the GNU Lesser General Public License
#

AUTOMAKE_OPTIONS = foreign subdir-objects


# Generator script

GIT_INFO_SCRIPT     = src/generate-git-info


# Install

dist_bin_SCRIPTS =                      \
    $(GIT_INFO_SCRIPT)


# Documentation

docdir = $(datadir)/doc/git-info
doc_DATA = doc/*
